# poc_thales_doctolib

./: Cargo.toml  index.html  login.html
src/: main.rs
src/config/: crypto.rs  mod.rs
src/handlers/: authentication.rs  mod.rs  signin.rs
src/models/: user.rs
