[package]
name = "thales_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.3"}
serde = "1.0.130"
config = "0.11.0"
dotenv = "0.15"
eyre = "0.6.5"
color-eyre = "0.5.11"
jsonwebtoken = "7.1"
futures = {version = "0.3", features = ["compat"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = {version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2.0"
uuid ={version = "0.8", features = ["serde","v4"]}
validator = "0.14.0"
validator_derive ="0.14.0"
actix-web-httpauth = "0.5.1"
chrono = {version = "0.4.19", features = ["serde"]}
